--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@ TC: $O(n)$
 MC: $O(1)$
 
 Börjar med $res_0=1$ (basfall)
-Sedan varje iteration $res_{i+1}=i*res_i$ (induktionssteg)
+Sedan varje iteration $res_{i+1}=x*res_i$ (induktionssteg)
 $\implies res_i=x^i$
 Resultatet är $res_n$ alltså $x^n$
 
